src/qir/snapshots/hugr_qir__qir__tket2_ext__test__emit@llvm14_tket2.quantum.QFree.snap
---
source: src/qir/tket2_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

%QUBIT = type opaque

define void @_hl.main.1(%QUBIT* %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @__quantum__rt__qubit_release(%QUBIT* %0)
  ret void
}

declare void @__quantum__rt__qubit_release(%QUBIT*)
