src/qir/snapshots/hugr_qir__qir__tket2_ext__test__emit@pre-mem2reg@llvm14_tket2.quantum.Measure.snap
---
source: src/qir/tket2_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

%QUBIT = type opaque
%RESULT = type opaque

define { %QUBIT*, { i32, {}, {} } } @_hl.main.1(%QUBIT* %0) {
alloca_block:
  %"0" = alloca %QUBIT*, align 8
  %"1" = alloca { i32, {}, {} }, align 8
  %"2_0" = alloca %QUBIT*, align 8
  %"4_0" = alloca %QUBIT*, align 8
  %"4_1" = alloca { i32, {}, {} }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store %QUBIT* %0, %QUBIT** %"2_0", align 8
  %"2_01" = load %QUBIT*, %QUBIT** %"2_0", align 8
  %1 = call %RESULT* @__quantum__qis__m__body(%QUBIT* %"2_01")
  %2 = call i1 @__quantum__qis__read_result__body(%RESULT* %1)
  %3 = select i1 %2, { i32, {}, {} } { i32 1, {} poison, {} undef }, { i32, {}, {} } { i32 0, {} undef, {} poison }
  store %QUBIT* %"2_01", %QUBIT** %"4_0", align 8
  store { i32, {}, {} } %3, { i32, {}, {} }* %"4_1", align 4
  %"4_02" = load %QUBIT*, %QUBIT** %"4_0", align 8
  %"4_13" = load { i32, {}, {} }, { i32, {}, {} }* %"4_1", align 4
  store %QUBIT* %"4_02", %QUBIT** %"0", align 8
  store { i32, {}, {} } %"4_13", { i32, {}, {} }* %"1", align 4
  %"04" = load %QUBIT*, %QUBIT** %"0", align 8
  %"15" = load { i32, {}, {} }, { i32, {}, {} }* %"1", align 4
  %mrv = insertvalue { %QUBIT*, { i32, {}, {} } } undef, %QUBIT* %"04", 0
  %mrv6 = insertvalue { %QUBIT*, { i32, {}, {} } } %mrv, { i32, {}, {} } %"15", 1
  ret { %QUBIT*, { i32, {}, {} } } %mrv6
}

declare %RESULT* @__quantum__qis__m__body(%QUBIT*)

declare i1 @__quantum__qis__read_result__body(%RESULT*)
